[package]
name = "ora-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
http = "1.1.0"
lazy_static = "1.4.0"
pingora = { version = "0.1.0", default-features = false, features = ["lb", "openssl"] }
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-limits = "0.1.0"
